--- a/report/main.tex
+++ b/report/main.tex
@@ -118,17 +118,17 @@ The code for this block is given in \autoref{lst:sv_devices_mux}.
 \end{figure}
 
 \begin{figure}[H]
-  \centering
-    \includegraphics[width=.85\textwidth]{images/ModelSim/nesreader.JPG}
-	\caption{This is the ModelSim simulated representation of the Top_Level Module of the NES Controller. As one can see, as the clock input is pulsing, the reset_n is turned HIGH (1) and the dataYellow input is HIGH (1), the NES button outputs are each turning to a logic 1 in a period of 100ns. Meanwhile, the internal 4-bit count is incrementing from 0-F in binary. Each button on the NES turns into a logic 1 on the rising edge of the clock. As expected, once the reset is turned OFF (LOW), the functionality of the NES stops as per the 1600ns mark on the simulation.}
-    \label{fig:top_level_block_sim}
+	\centering
+	\includegraphics[width=.85\textwidth]{images/ModelSim/nesreader.JPG}
+	\caption{This is the ModelSim simulated representation of the Top\_Level Module of the NES Controller. As one can see, as the clock input is pulsing, the reset\_n is turned HIGH (1) and the dataYellow input is HIGH (1), the NES button outputs are each turning to a logic 1 in a period of 100ns. Meanwhile, the internal 4-bit count is incrementing from 0-F in binary. Each button on the NES turns into a logic 1 on the rising edge of the clock. As expected, once the reset is turned OFF (LOW), the functionality of the NES stops as per the 1600ns mark on the simulation.}
+	\label{fig:top_level_block_sim}
 \end{figure}
 
 \begin{figure}[H]
-  \centering
-    \includegraphics[width=.85\textwidth]{images/ModelSim/nesdo.JPG}
+	\centering
+	\includegraphics[width=.85\textwidth]{images/ModelSim/nesdo.JPG}
 	\caption{Script of the Simulation}
-    \label{fig:top_level_do}
+	\label{fig:top_level_do}
 \end{figure}
 
 \subsubsection{NES Data Receiver}
@@ -143,17 +143,17 @@ The code for this block is given in \autoref{lst:sv_devices_mux}.
 \end{figure}
 
 \begin{figure}[H]
-  \centering
-    \includegraphics[width=.85\textwidth]{images/ModelSim/nesdatare.JPG}
+	\centering
+	\includegraphics[width=.85\textwidth]{images/ModelSim/nesdatare.JPG}
 	\caption{NES Data Receiver Simulation Part 1}
-    \label{fig:data_receiver_sim}
+	\label{fig:data_receiver_sim}
 \end{figure}
 
 \begin{figure}[H]
-  \centering
-    \includegraphics[width=.85\textwidth]{images/ModelSim/nesdatare2.JPG}
-	\caption{This is the simulation provided for the NesDataReceiver module. In order for the NES to function, both the reset_n and dataYellow input have to be at a logic 1 (HIGH). As the NesDataReceiver count increments from 0->F, the output shows that the button outputs pulse to a logic 1 in increments of 100ns. Near the end of the simulation, pulling the “reset_n” input back to zero.}
-    \label{fig:data_receiver_sim}
+	\centering
+	\includegraphics[width=.85\textwidth]{images/ModelSim/nesdatare2.JPG}
+	\caption{This is the simulation provided for the NesDataReceiver module. In order for the NES to function, both the reset\_n and dataYellow input have to be at a logic 1 (HIGH). As the NesDataReceiver count increments from 0->F, the output shows that the button outputs pulse to a logic 1 in increments of 100ns. Near the end of the simulation, pulling the “reset\_n” input back to zero.}
+	\label{fig:data_receiver_sim}
 \end{figure}
 
 \subsubsection{NES Latch}
@@ -168,10 +168,10 @@ The code for this block is given in \autoref{lst:sv_devices_mux}.
 \end{figure}
 
 \begin{figure}[H]
-  \centering
-    \includegraphics[width=.85\textwidth]{images/ModelSim/neslatch_sim.JPG}
+	\centering
+	\includegraphics[width=.85\textwidth]{images/ModelSim/neslatch_sim.JPG}
 	\caption{This is the individual simulation of the NesLatchStateDecoder module. As displayed, the latch state is pulled to a logic 1 when the 4-bit controllerState input is at 0. Otherwise, the output is at a logic 0. This makes sense when looking at the module, the B input is at a constant 0. As long at the 4-bit input, also named as A[3..0], is not equivalent to B (0), the latch output will always be at 0.}
-    \label{fig:latch_sim}
+	\label{fig:latch_sim}
 \end{figure}
 
 \subsubsection{NES Clock}
@@ -186,10 +186,10 @@ The code for this block is given in \autoref{lst:sv_devices_mux}.
 \end{figure}
 
 \begin{figure}[H]
-  \centering
-    \includegraphics[width=.85\textwidth]{images/ModelSim/nesclock.JPG}
+	\centering
+	\includegraphics[width=.85\textwidth]{images/ModelSim/nesclock.JPG}
 	\caption{This is the individual simulation of the NesClockStateDecoder module ran on ModelSim. As the 4-bit controllerState increments from 0->F in binary, the output is shown to be operating as it should with a clock pulsing between equal intervals. Looking more in depth at the NesClockStateDecoder, the OR gate implemented only outputs a 1 on even inputs. Looking at the simulation here, one can see that the output is at a logic 1 for every even number input shown in binary such as 4’b0010 and 4’0101.}
-    \label{fig:clock_sim}
+	\label{fig:clock_sim}
 \end{figure}
 
 \subsubsection{NES Counter}
@@ -204,10 +204,10 @@ The code for this block is given in \autoref{lst:sv_devices_mux}.
 \end{figure}
 
 \begin{figure}[H]
-  \centering
-    \includegraphics[width=.85\textwidth]{images/ModelSim/nescounter.JPG}
-	\caption{This simulation is representing the individual counter module of the NES controller. By sending in a clock input at the start and testing the reset_n input, one can see that the counter doesn’t operate when reset_n is LOW (expected). As reset_n shifts to a logic 1 upon 150ns and stays at 1, the counter is shown to be functioning. It is incrementing by 1 from 0->F (represented in binary), and once it reaches F, the next value for the output returns to 0.}
-    \label{fig:counter_sim}
+	\centering
+	\includegraphics[width=.85\textwidth]{images/ModelSim/nescounter.JPG}
+	\caption{This simulation is representing the individual counter module of the NES controller. By sending in a clock input at the start and testing the reset\_n input, one can see that the counter doesn’t operate when reset\_n is LOW (expected). As reset\_n shifts to a logic 1 upon 150ns and stays at 1, the counter is shown to be functioning. It is incrementing by 1 from 0->F (represented in binary), and once it reaches F, the next value for the output returns to 0.}
+	\label{fig:counter_sim}
 \end{figure}
 
 \subsection{PS2 Keyboard Decoder}
